{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 87,
  "lineage": "0702e8ea-5f15-d555-e20b-1040d7c7641e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Webserver1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030e490c34394591b",
            "arn": "arn:aws:ec2:eu-central-1:148580648012:instance/i-0e3eabb7459e2f149",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3eabb7459e2f149",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083bc5acffa7c8de5",
            "private_dns": "ip-10-0-101-22.eu-central-1.compute.internal",
            "private_ip": "10.0.101.22",
            "public_ip": "3.70.241.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d8ecab36540af239",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0530f48d1e8597eb4",
            "tags": {
              "Name": "Michis Webserver",
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer"
            },
            "tags_all": {
              "Name": "Michis Webserver",
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8990c24f5bc9e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "Webserver2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030e490c34394591b",
            "arn": "arn:aws:ec2:eu-central-1:148580648012:instance/i-026b6f351d824bf9d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026b6f351d824bf9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f5c589099fd33e5",
            "private_dns": "ip-10-0-101-100.eu-central-1.compute.internal",
            "private_ip": "10.0.101.100",
            "public_ip": "18.185.34.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e15c54cc5d2b0400",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0530f48d1e8597eb4",
            "tags": {
              "Name": "Michis Webserver",
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer"
            },
            "tags_all": {
              "Name": "Michis Webserver",
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8990c24f5bc9e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:security-group/sg-0c8990c24f5bc9e8e",
            "description": "Allow access to the server from the web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8990c24f5bc9e8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-access20211119141850746300000001",
            "name_prefix": "web-access",
            "owner_id": "148580648012",
            "revoke_rules_on_delete": false,
            "tags": {
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer"
            },
            "tags_all": {
              "Owner": "Enterprise",
              "Projekt": "TecRacccceeer",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccb54009654fb8e8",
            "association_id": "eipassoc-0e9131d8300cd025a",
            "domain": "vpc",
            "id": "eipalloc-0ccb54009654fb8e8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f51ba11f07319a75",
            "private_dns": "ip-10-0-101-18.eu-central-1.compute.internal",
            "private_ip": "10.0.101.18",
            "public_dns": "ec2-3-125-58-154.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.58.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-eu-central-1a",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:internet-gateway/igw-0bdb9bea53dccd9a0",
            "id": "igw-0bdb9bea53dccd9a0",
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccb54009654fb8e8",
            "connectivity_type": "public",
            "id": "nat-0e55591dbc975e860",
            "network_interface_id": "eni-0f51ba11f07319a75",
            "private_ip": "10.0.101.18",
            "public_ip": "3.125.58.154",
            "subnet_id": "subnet-0530f48d1e8597eb4",
            "tags": {
              "Name": "my-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-eu-central-1a",
              "Terraform": "true",
              "automated_through": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a91416d5e232ed571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e55591dbc975e860",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a91416d5e232ed57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bdb9bea53dccd9a0",
            "id": "r-rtb-03aba3f7e810680881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03aba3f7e81068088",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:route-table/rtb-0a91416d5e232ed57",
            "id": "rtb-0a91416d5e232ed57",
            "owner_id": "148580648012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e55591dbc975e860",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-private"
            },
            "tags_all": {
              "Name": "my-vpc-private",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:route-table/rtb-03aba3f7e81068088",
            "id": "rtb-03aba3f7e81068088",
            "owner_id": "148580648012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdb9bea53dccd9a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd25857c9e49d7c",
            "route_table_id": "rtb-0a91416d5e232ed57",
            "subnet_id": "subnet-0b0cd02abbd0ffe58"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f37b18dacdda87d",
            "route_table_id": "rtb-0a91416d5e232ed57",
            "subnet_id": "subnet-052562368e11b7831"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027ae08d26b18e69b",
            "route_table_id": "rtb-0a91416d5e232ed57",
            "subnet_id": "subnet-0c238886ec05d2186"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d81a23e25cfade26",
            "route_table_id": "rtb-03aba3f7e81068088",
            "subnet_id": "subnet-0530f48d1e8597eb4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a871ecfca2646e8",
            "route_table_id": "rtb-03aba3f7e81068088",
            "subnet_id": "subnet-02dc481bdd849a860"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac7bbe057c388c7",
            "route_table_id": "rtb-03aba3f7e81068088",
            "subnet_id": "subnet-05daf1280d1f64175"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-0b0cd02abbd0ffe58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b0cd02abbd0ffe58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1a",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-052562368e11b7831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-052562368e11b7831",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1b",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-0c238886ec05d2186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c238886ec05d2186",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1c",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-0530f48d1e8597eb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0530f48d1e8597eb4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1a",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-02dc481bdd849a860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-02dc481bdd849a860",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1b",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:subnet/subnet-05daf1280d1f64175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-05daf1280d1f64175",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc-public-eu-central-1c"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1c",
              "Terraform": "true",
              "automated_through": "Terraform"
            },
            "vpc_id": "vpc-093c35242b6a804cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:148580648012:vpc/vpc-093c35242b6a804cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-095013ad4b4dc449e",
            "default_route_table_id": "rtb-0c1dda920f792c23e",
            "default_security_group_id": "sg-0853065d780fc5880",
            "dhcp_options_id": "dopt-25d7d34e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-093c35242b6a804cd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1dda920f792c23e",
            "owner_id": "148580648012",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Terraform": "true",
              "automated_through": "Terraform"
            }
          }
        }
      ]
    }
  ]
}